big refactor all style components

--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,4 +1,4 @@
-@import '../../assets/scss/_variables.scss';
+@import '../../assets/scss/old/variables';
 .footer {
   position: relative;
   z-index: 900;
