--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,5 +1,5 @@
 /*----- HEADER -----*/
-@import '../../assets/scss/_variables.scss';
+@import '../../assets/scss/old/variables';
 
 .header {
   display: none;
