--- a/src/app/popups/two-factor-popup/google-step-one/google-step-one.component.html
+++ b/src/app/popups/two-factor-popup/google-step-one/google-step-one.component.html
@@ -1,8 +1,8 @@
-<div class="modal__title">Two-Factor authentication by google authentificator</div>
-<div class="modal__subtitle">
+<div class="title modal__title">Two-Factor authentication by google authentificator</div>
+<div class="subtitle modal__subtitle">
   <p>Download Google Authenticator on your mobile device</p>
 </div>
-<div class="modal__row modal__row--mob-600-column modal__row--mb32">
+<div class="modal__store-row">
   <a class="modal__store-link" href="#">
     <img src="../../../../assets/img/g-play-black-bg.svg">
   </a>
@@ -10,4 +10,4 @@
     <img src="../../../../assets/img/app-store-black-bg.svg">
   </a>
 </div>
-<a class="button button--active button--center button--fz18" (click)="onNextStep()">To the next step</a>
+<button class="btn btn--active btn--center " (click)="onNextStep()">To the next step</button>
