--- a/src/app/popups/two-factor-popup/google-step-two/google-step-two.component.html
+++ b/src/app/popups/two-factor-popup/google-step-two/google-step-two.component.html
@@ -1,6 +1,6 @@
-<div class="modal__title">Two-Factor authentication by google authentificator</div>
-<div class="modal__subtitle">
+<div class="title modal__title">Two-Factor authentication by google authentificator</div>
+<div class="subtitle modal__subtitle">
   <p>Use Google Authenticator to scan the QRCode</p>
 </div>
 <img class="modal__qr-code" src="../../../../assets/img/qr-code.svg">
-<a class="button button--active button--center button--fz18" (click)="onNextStep()">Ok, I did it</a>
+<button class="btn btn--active btn--center" (click)="onNextStep()">Ok, I did it</button>
