--- a/src/app/popups/two-factor-popup/telegram-step-two/telegram-step-two.component.html
+++ b/src/app/popups/two-factor-popup/telegram-step-two/telegram-step-two.component.html
@@ -1,9 +1,5 @@
-<div class="modal__title">Two-Factor authentication by telegram</div>
-<div class="modal__subtitle">
-  <p>Plug in telegram bot</p>
-</div>
-<div class="modal__title">Two-Factor authentication by telegram</div>
-<div class="modal__subtitle">
+<div class="title modal__title">Two-Factor authentication by telegram</div>
+<div class="subtitle modal__subtitle">
   <p>Plug in telegram bot</p>
 </div>
 <div class="modal__row">
@@ -15,4 +11,10 @@
 <div class="modal__row modal__row--mb20">
   <p>Click on button below after it</p>
 </div>
-<a class="button button--active button--center button--fz18" href="#">Enable</a>
+<button class="btn btn--active btn--center btn--mb32">Enable</button>
+<div class="note modal__note">
+  <div class="note__title">Please note:</div>
+  <ul class="note__list">
+    <li class="note__list-item">Everytime when you need to to pass two factor authorisation bot will generate code fore you automaticaly.</li>
+  </ul>
+</div>
