--- a/src/app/settings/email-notification/email-notification.component.html
+++ b/src/app/settings/email-notification/email-notification.component.html
@@ -1,38 +1,38 @@
-<div class="settings-content settings-content--mob-asc">
-  <h3 class="settings-content__title settings-content__title--mob-mb32">Email Notifications</h3>
+<div class="settings__content">
+  <h3 class="title settings__content-title">Email Notifications</h3>
   <div class="settings__toggler-row">
-    <label for="" class="toggler-button settings__toggler">
+    <label for="" class="toggler settings__toggler">
       <input type="checkbox" name="" value="">
-      <span class="toggler-button__indicate"></span>
+      <span class="toggler__indicate"></span>
     </label>
-    <span class="settings__toggler-row-text">Input / output</span>
+    <span class="settings__toggler-text">Input / output</span>
   </div>
   <div class="settings__toggler-row">
-    <label for="" class="toggler-button settings__toggler">
+    <label for="" class="toggler settings__toggler">
       <input type="checkbox" name="" value="">
-      <span class="toggler-button__indicate"></span>
+      <span class="toggler__indicate"></span>
     </label>
-    <span class="settings__toggler-row-text">Orders</span>
+    <span class="settings__toggler-text">Orders</span>
   </div>
   <div class="settings__toggler-row">
-    <label for="" class="toggler-button settings__toggler">
+    <label for="" class="toggler settings__toggler">
       <input type="checkbox" name="" value="">
-      <span class="toggler-button__indicate"></span>
+      <span class="toggler__indicate"></span>
     </label>
-    <span class="settings__toggler-row-text">Account changes</span>
+    <span class="settings__toggler-text">Account changes</span>
   </div>
   <div class="settings__toggler-row">
-    <label for="" class="toggler-button settings__toggler">
+    <label for="" class="toggler settings__toggler">
       <input type="checkbox" name="" value="">
-      <span class="toggler-button__indicate"></span>
+      <span class="toggler__indicate"></span>
     </label>
-    <span class="settings__toggler-row-text">Notifications from administrators</span>
+    <span class="settings__toggler-text">Notifications from administrators</span>
   </div>
   <div class="settings__toggler-row">
-    <label for="" class="toggler-button settings__toggler">
+    <label for="" class="toggler settings__toggler">
       <input type="checkbox" name="" value="">
-      <span class="toggler-button__indicate"></span>
+      <span class="toggler__indicate"></span>
     </label>
-    <span class="settings__toggler-row-text">Other messages</span>
+    <span class="settings__toggler-text">Other messages</span>
   </div>
 </div>
