--- a/src/app/settings/password/password.component.html
+++ b/src/app/settings/password/password.component.html
@@ -1,85 +1,77 @@
-<!-- <div class="content content--settings"> -->
-  <div class="settings-content">
-    <h3 class="settings-content__title settings-content__title--mb32">Change password</h3>
+  <div class="settings__content">
+    <h3 class="title settings__content-title">Change password</h3>
     <form class="settings-form" [formGroup]="form" (ngSubmit)="onSubmit()">
-      <div class="settings-form__row">
-        <div class="wrap-input settings-form__wrap-input">
+      <div class="settings__form-row">
+        <div class="wrap-input wrap-input--fix230">
           <input
-            class="input"
+            class="wrap-input__input"
             [ngClass]="{'input--error': !form.get('password_1').valid && form.get('password_1').touched}"
             [type]="getInputType()"
             formControlName="password_1"
           >
-
-          <label class="wrap-input__label">Current password</label>
+          <label class="wrap-input__label" for="">Current password</label>
           <div class="wrap-input__line"></div>
           <span
             class="wrap-input__show-password"
             (click)="togglePasswordVisibility()"
             [ngClass]="{'wrap-input__show-password--active': isPasswordVisible}"
-          >
-          </span>
+          ></span>
           <!--Input error section starts-->
           <div *ngIf="form.get('password_1').touched && form.get('password_1').errors != null">
               <span
-               *ngIf="form.get('password_1').errors['required']"
-               class="wrap-input__valid">
+                *ngIf="form.get('password_1').errors['required']"
+                class="wrap-input__message">
                 This field is required.
               </span>
-              <span
-                *ngIf="form.get('password_1').invalid && !form.get('password_1').errors['required']"
-                class="wrap-input__valid">
+            <span
+              *ngIf="form.get('password_1').invalid && !form.get('password_1').errors['required']"
+              class="wrap-input__message">
                 Password must be between 8 and 20 symbols, contain letters and numbers.
               </span>
           </div>
           <!--Input error section ends-->
-        </div><span class="settings-form__input-notice">for safety, to confirm that you it is you </span>
-
+        </div>
+        <span class="settings__form-notice">for safety, to confirm that you it is you </span>
       </div>
-      <div class="settings-form__row">
-        <div class="wrap-input settings-form__wrap-input">
+      <div class="settings__form-row">
+        <div class="wrap-input wrap-input--fix230">
           <input
-            class="input"
-            [ngClass]="{'input--error': !form.get('password_2').valid && form.get('password_2').touched}"
+            class="wrap-input__input"
+            [ngClass]="{'input--error': !form.get('password_1').valid && form.get('password_1').touched}"
             [type]="getInputType()"
-            formControlName="password_2"
+            formControlName="password_1"
           >
-
-          <label class="wrap-input__label">New password</label>
+          <label class="wrap-input__label" for="">New password</label>
           <div class="wrap-input__line"></div>
           <span
             class="wrap-input__show-password"
             (click)="togglePasswordVisibility()"
             [ngClass]="{'wrap-input__show-password--active': isPasswordVisible}"
-          >
-          </span>
-          <!--<span class="wrap-input__valid">This nickname already taken. Please take another one</span>-->
+          ></span>
           <!--Input error section starts-->
-          <div *ngIf="form.get('password_2').touched && form.get('password_2').errors != null">
-          <span
-            *ngIf="form.get('password_1').errors['required']"
-            class="wrap-input__valid">
-            This field is required.
-          </span>
+          <div *ngIf="form.get('password_1').touched && form.get('password_1').errors != null">
+              <span
+                *ngIf="form.get('password_1').errors['required']"
+                class="wrap-input__message">
+                This field is required.
+              </span>
             <span
-              *ngIf="form.get('password_2').errors['passwordsDiffer'] && !form.get('password_1').errors['required']"
-              class="wrap-input__valid">
-            The passwords do not match.
-          </span>
+              *ngIf="form.get('password_1').invalid && !form.get('password_1').errors['required']"
+              class="wrap-input__message">
+                The passwords do not match.
+              </span>
           </div>
           <!--Input error section ends-->
         </div>
-
-          <span class="settings-form__input-notice">should have 8 chars at least, symbols and numbers </span>
+        <span class="settings__form-notice">should have 8 chars at least, symbols and numbers</span>
       </div>
-      <button class="button settings-form__button settings-form__button--mt32">Change password</button>
+      <!---->
+      <button class="btn settings__form-btn">Change password</button>
     </form>
   </div>
-  <div class="notification-popup change-pass-notif">
-    <img class="notification-popup__icon" src="../../../assets/img/key.svg">
-    <img class="notification-popup__close notification-popup__close--mob" src="../../../assets/img/close-grey.svg" alt="close">
-      Password successfully changed
-    <img class="notification-popup__close" src="../../../assets/img/close-blue.svg"  alt="close">
-
-  </div>
-<!-- </div> -->
+  <!--<div class="notification-popup change-pass-notif">-->
+    <!--<img class="notification-popup__icon" src="../../../assets/img/key.svg">-->
+    <!--<img class="notification-popup__close notification-popup__close&#45;&#45;mob" src="../../../assets/img/close-grey.svg" alt="close">-->
+      <!--Password successfully changed-->
+    <!--<img class="notification-popup__close" src="../../../assets/img/close-blue.svg"  alt="close">-->
+  <!--</div>-->
