--- a/src/assets/scss/old/_header-mob.scss
+++ b/src/assets/scss/old/_header-mob.scss
@@ -166,7 +166,7 @@
     // height: calc(100vh - 60px);
     min-height: 100%;
     padding-top: 22px;
-    background-image: url('../img/header-mob-bg.svg');
+    background-image: url('../../img/header-mob-bg.svg');
     background-repeat: no-repeat;
     background-position: left bottom;
   }
