--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,27 +1,36 @@
-@import "variables.scss";
-@import "animations";
+@import "variables";
+// @import "animations";
 @import "layout";
-@import "header-mob";
-@import "header";
-/*----- CONTENT -----*/
-@import "page-title";
-@import "button";
-@import "requests";
-@import "notification-popup";
-@import "wrap-input";
-@import "toggler-button";
-@import "dropdown";
-@import "table-top";
-@import "table";
-@import "under-table";
-@import "paginator";
-@import "popup";
-@import "settings";
-@import "open-balance-mob";
-@import "radio-btn";
-@import "select";
-@import "datepicker";
-/*----- CONTENT END -----*/
-@import "footer";
-@import "modal";
-@import "chat-btn";
+/*--- COMPONENTS ---*/
+//@import "components/header";
+//@import "components/header-mob";
+@import "components/page-title";
+@import "components/title";
+@import "components/subtitle";
+@import "components/table";
+@import "components/btn";
+@import "components/input";
+@import "components/input-file";
+@import "components/select";
+@import "components/datepicker";
+@import "components/row";
+@import "components/link";
+@import "components/toggler";
+@import "components/radio";
+@import "components/dropdown";
+@import "components/paginator";
+@import "components/notification-popup";
+@import "components/steps";
+@import "components/chat-btn";
+@import "components/back-to";
+@import "components/overlay";
+@import "components/sidebar-menu";
+@import "components/note";
+//@import "components/footer";
+@import "components/modal";
+/*--- PAGES ---*/
+@import "pages/login-registration";
+@import "pages/settings/settings";
+@import "pages/settings/2fa/settings-2fa";
+@import "pages/settings/nickname/settings-nickname";
+@import "pages/settings/kyc/settings-kyc";
