--- a/src/app/popups/identity-popup/identity-popup.component.html
+++ b/src/app/popups/identity-popup/identity-popup.component.html
@@ -1,7 +1,4 @@
-<p>
-  identity-popup works!
-</p>
-<div class="modal-wrap">
+<div class="overlay--modal">
   <div class="modal">
     <div class="modal__controls modal__controls--top">
       <a class="modal__button modal__button--close" (click)="closeMe()">
@@ -9,14 +6,9 @@
         <img class="modal__button-icon" src="../../../../assets/img/close.svg">
       </a>
     </div>
-    <div class="modal__controls modal__controls--bottom"><a class="modal__button"><span> </span><img class="modal__button-icon" src="../../../../assets/img/minimize.svg"></a>
-    </div>
     <div class="modal__header-mob">
       <div class="steps__counter steps__counter--mob">step <span class="steps__counter-val">{{step}}</span>/{{stepsSize}}</div>
       <div class="modal__header-mob-controls">
-        <a class="modal__control-mob" href="#">
-          <img class="modal__control-icon" src="../../../../assets/img/minimize-mob-blue.svg">
-        </a>
         <a class="modal__control-mob" href="#">
           <img class="modal__control-icon" src="../../../../assets/img/learn-blue.svg">
         </a>
@@ -27,30 +19,30 @@
     </div>
     <div class="modal__header">
       <ul class="steps">
-        <li class="steps__item" [ngClass]="{'steps__item--current': step === 1}"  (click)="moveNext(1)"*ngIf="step > 0">
+        <li class="steps__item" [ngClass]="{'steps__item--current': step === 1}" (click)="moveNext(1)" *ngIf="step > 0">
           <a class="steps__link" (click)="moveNext(2)">
-            <span class="steps__number"  [ngClass]="{'steps__number--current': step === 1, 'steps__number--valid': step != 1 }">1</span>
+            <span class="steps__number" [ngClass]="{'steps__number--current': step === 1, 'steps__number--valid': step != 1 }">1</span>
             <span class="steps__number-mob-current">1. Enter info</span>
             <span class="steps__title">Enter info</span>
           </a>
         </li>
         <li class="steps__item" [ngClass]="{'steps__item--current': step === 2}" *ngIf="step > 1">
           <a class="steps__link" (click)="moveNext(3)">
-            <span class="steps__number"  [ngClass]="{'steps__number--current': step === 2, 'steps__number--valid': step != 2 }">2</span>
+            <span class="steps__number" [ngClass]="{'steps__number--current': step === 2, 'steps__number--valid': step != 2 }">2</span>
             <span class="steps__number-mob-current">2. Document photo</span>
             <span class="steps__title">Document photo</span>
           </a>
         </li>
-        <li class="steps__item" [ngClass]="{'steps__item--current': step === 3}"  *ngIf="step > 2">
+        <li class="steps__item" [ngClass]="{'steps__item--current': step === 3}" *ngIf="step > 2">
           <a class="steps__link" (click)="moveNext(4)">
-            <span class="steps__number"  [ngClass]="{'steps__number--current': step === 3, 'steps__number--valid': step != 3 }">3</span>
+            <span class="steps__number" [ngClass]="{'steps__number--current': step === 3, 'steps__number--valid': step != 3 }">3</span>
             <span class="steps__number-mob-current">3. Your photo</span>
             <span class="steps__title">Your photo</span>
           </a>
         </li>
-        <li class="steps__item"  [ngClass]="{'steps__item--current': step === 4}"  (click)="moveNext(4)"*ngIf="step > 3">
+        <li class="steps__item" [ngClass]="{'steps__item--current': step === 4}" (click)="moveNext(4)" *ngIf="step > 3">
           <a class="steps__link">
-            <span class="steps__number"  [ngClass]="{'steps__number--current': step === 4, 'steps__number--valid': step != 4 }">4</span>
+            <span class="steps__number" [ngClass]="{'steps__number--current': step === 4, 'steps__number--valid': step != 4 }">4</span>
             <span class="steps__number-mob-current">4. Progress</span>
             <span class="steps__title">Progress</span>
           </a>
@@ -78,14 +70,14 @@
 
       <!--<div class="modal__title">Submission received!</div>-->
       <!--<div class="modal__subtitle">-->
-        <!--<p>You can check status of your verification on your <a class="link" href="#">profile page</a>. </p>-->
+      <!--<p>You can check status of your verification on your <a class="link" href="#">profile page</a>. </p>-->
       <!--</div>-->
       <!--<div class="modal__row modal__row&#45;&#45;mb32 txt-grey">Please note that it can take a few minutes to auto-verify your account. If more-->
-        <!--information is needed to verify your account, our support team will reach out-->
-        <!--via email to guide you through the process.-->
+      <!--information is needed to verify your account, our support team will reach out-->
+      <!--via email to guide you through the process.-->
       <!--</div>-->
       <!--<div class="modal__row">-->
-        <!--<a href="#" class="button"> Ok</a>-->
+      <!--<a href="#" class="button"> Ok</a>-->
       <!--</div>-->
     </div>
   </div>
