--- a/src/app/popups/identity-popup/step-four/step-four.component.html
+++ b/src/app/popups/identity-popup/step-four/step-four.component.html
@@ -1,4 +1,4 @@
-<div class="modal__title">Submission received!</div>
-<div class="modal__subtitle">
-  <p>You can check status of your verification on your <a href="#">profile page</a>. </p>
+<div class="title modal__title">Submission received!</div>
+<div class="subtitle modal__subtitle">
+  <p>You can check status of your verification on your <a class="link" href="#">profile page</a>. </p>
 </div>
