--- a/src/app/popups/two-factor-popup/google-step-four/google-step-four.component.html
+++ b/src/app/popups/two-factor-popup/google-step-four/google-step-four.component.html
@@ -1,16 +1,16 @@
-<div class="modal__title">Two-Factor authentication by google authentificator</div>
-<div class="modal__subtitle">
+<div class="title modal__title">Two-Factor authentication by google authentificator</div>
+<div class="subtitle modal__subtitle">
   <p>Enterh the autentification code</p>
 </div>
 <div class="modal__row modal__row--mb24">
-  <p>Reseting your two - factor authentication requires opening a support ticket and may take up to 48 hours to
-    address.</p>
+  <p>Reseting your two - factor authentication requires opening a support ticket and may take up to 48 hours to address.</p>
 </div>
 <div class="modal__row modal__row--mb32">
-  <div class="wrap-input wrap-input--230">
-    <input class="input" type="text" required="">
+  <div class="wrap-input wrap-input--fix230">
+    <input class="wrap-input__input" id="login-email" type="text" required="">
     <label class="wrap-input__label" for="">Authentification code</label>
     <div class="wrap-input__line"></div>
-    <span class="wrap-input__valid">Incorrect code.</span>
+    <span class="wrap-input__message">Incorrect code.</span>
   </div>
-</div><a class="button button--active button--center button--fz18" href="#">Enable GA</a>
+</div>
+<button class="btn btn--active btn--center " href="#">Enable GA</button>
