--- a/src/app/popups/two-factor-popup/google-step-three/google-step-three.component.html
+++ b/src/app/popups/two-factor-popup/google-step-three/google-step-three.component.html
@@ -1,5 +1,5 @@
-<div class="modal__title">Two-Factor authentication by google authentificator</div>
-<div class="modal__subtitle">
+<div class="title modal__title">Two-Factor authentication by google authentificator</div>
+<div class="subtitle modal__subtitle">
   <p>Back up your Secret Key.</p>
 </div>
 <div class="modal__row">
@@ -8,4 +8,4 @@
 <div class="modal__row">
   <div class="modal__code-grey-field">ghmxPw14AFcByz</div>
 </div>
-<a class="button button--active button--center button--fz18" (click)="onNextStep()">Yes I saved it</a>
+<button class="btn btn--active btn--center " (click)="onNextStep()">Yes I saved it</button>
