--- a/src/app/popups/two-factor-popup/sms-step-one/sms-step-one.component.html
+++ b/src/app/popups/two-factor-popup/sms-step-one/sms-step-one.component.html
@@ -1,9 +1,9 @@
-<div class="modal__title">Two-Factor authentication by phone number</div>
-<div class="modal__subtitle">
+<div class="title modal__title">Two-Factor authentication by phone number</div>
+<div class="subtitle modal__subtitle">
   <p>Enter the phone number</p>
 </div>
-<div class="modal__row modal__row--mb32 modal__row--mob-600-column">
-  <div class="select select--flex modal__select-in-row" (click)="openDropdown()">
+<div class="modal__row modal__row--mb32 modal__row--mob-column">
+  <div class="select select--fix230 select--country" (click)="openDropdown()">
     <div class="select__value select__value--active">
       <img [src]="region.iconPath" class="select__list-item-icon">
       {{ region.country }}
@@ -16,42 +16,32 @@
         <img [src]="reg.iconPath" class="select__list-item-icon">
         {{ reg.country }}
       </li>
-      <!--<li class="select__list-item"><img class="select__list-item-icon" src="../../../../assets/img/flag-pl.svg">Ukraine</li>-->
-      <!--<li class="select__list-item"><img class="select__list-item-icon" src="../../../../assets/img/flag-ru.svg">Russia</li>-->
-      <!--<li class="select__list-item"><img class="select__list-item-icon" src="../../../../assets/img/flag-en.svg">USA</li>-->
-      <!--<li class="select__list-item"><img class="select__list-item-icon" src="../../../../assets/img/flag-cn.svg">China</li>-->
     </ul>
   </div>
   <form [formGroup]="form">
-    <div class="wrap-input wrap-input--230">
+    <div class="wrap-input wrap-input--fix230">
       <input
-        class="input"
+        class="wrap-input__input"
         [ngClass]="{'input--error': !form.get('phone').valid && form.get('phone').touched }"
         type="text" formControlName="phone">
       <label class="wrap-input__label" for="">Phone number</label>
       <div class="wrap-input__line"></div>
-
       <!--Input error section starts-->
       <div *ngIf="form.get('phone').touched && form.get('phone').errors != null">
          <span
            *ngIf="form.get('phone').errors['required']"
-           class="wrap-input__valid">
+           class="wrap-input__message">
           Please enter the phone number.
         </span>
         <span
           *ngIf="form.get('phone').invalid && !form.get('phone').errors['required']"
-          class="wrap-input__valid">
+          class="wrap-input__message">
           Only numbers are allowed.
         </span>
       </div>
       <!--Input error section ends-->
-
     </div>
   </form>
-
 </div>
-
-<!--<a class="button button&#45;&#45;center" (click)="onNextStep()">Get verification code</a>-->
-
-<button class="button button--center" (click)="onNextStep()" [disabled]="form.invalid">Get verification code</button>
+<button class="btn btn--active btn--center " (click)="onNextStep()" [disabled]="form.invalid">Get verification code</button>
 
