--- a/src/app/popups/two-factor-popup/two-factor-popup.component.html
+++ b/src/app/popups/two-factor-popup/two-factor-popup.component.html
@@ -1,4 +1,4 @@
-<div class="modal-wrap">
+<div class="overlay--modal">
   <div class="modal">
     <!-- btn modal close -->
     <div class="modal__controls modal__controls--top">
