--- a/src/app/settings/view/view.component.html
+++ b/src/app/settings/view/view.component.html
@@ -1,10 +1,10 @@
-<div class="settings-content settings-content--mob-asc">
-  <h3 class="settings-content__title settings-content__title--mob-mb32">View</h3>
+<div class="settings__content">
+  <h3 class="title settings__content-title">View</h3>
   <div class="settings__toggler-row">
-    <label for="" class="toggler-button settings__toggler">
+    <label for="" class="toggler settings__toggler">
       <input type="checkbox" name="" value="">
-      <span class="toggler-button__indicate"></span>
+      <span class="toggler__indicate"></span>
     </label>
-    <span class="settings__toggler-row-text">Enable colors for color-blinds</span>
+    <span class="settings__toggler-text">Inable colors for color-blinds</span>
   </div>
 </div>
