--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -1,99 +1,91 @@
-*{
+* {
   box-sizing: border-box;
 }
+
 html {
   height: 100%;
 }
 
 body {
   position: relative;
-  color: #000;
   height: 100%;
+  color: #000;
   font-family: Roboto,Arial;
   font-size: 14px;
   font-weight: 400;
-
 }
-b{
+
+b {
   font-weight: bold;
 }
-.link{
-  color:$darker-blue;
-  text-decoration: none;
-  word-wrap: break-word;
-  font-weight: 400;
-  &--underline{
-    text-decoration: underline;
-  }
+
+.txt-green {
+  color: $green;
 }
-.txt-green{
-  color:$green;
+
+.txt-red {
+  color: $red;
 }
-.txt-red{
-  color:$red;
+
+.txt-light-grey {
+  color: $light-grey;
 }
-.txt-grey{
-  color: $grey;
-}
-.txt-center{
+
+.txt-center {
   text-align: center;
 }
+.txt-small{
+  font-size: 12px;
+  line-height: 14px;
+}
+
 .page-wrap {
   position: relative;
-  min-height: 100%;
   display: -webkit-flex;
   display: -ms-flex;
   display: flex;
   flex-direction: column;
+  min-height: 100%;
 }
-
+// .content {
+//   position: relative;
+//   box-sizing: border-box;
+//   width: 100%;
+//   max-width: 1280px;
+//   min-height: 100%;
+//   margin: 0 auto;
+//   padding: 12px 0 60px;
+//   @media (min-width:600px) {
+//     padding: 32px 12px 60px;
+//   }
+//   @media (min-width:1200px) {
+//     min-height: calc(100% - 75px);
+//     padding: 32px 20px 75px;
+//   }
+//
+// }
 
 .content {
   position: relative;
-  max-width: 1280px;
-  width: 100%;
+  display: -webkit-flex;
+  display: -ms-flex;
+  display: flex;
   flex-grow: 1;
-  display: -webkit-flex;
-  display: -ms-flex;
-  display: flex;
-  // height: 100%;
   box-sizing: border-box;
+  width: 100%;
+  max-width: 1280px;
   margin: 0 auto;
-  padding: 0px 0px 60px;
-  // min-height: 100%;
-  // height: calc(100% - 75px);
-  // height: 100%;
+  padding: 0 0 60px;
   @media (min-width:600px) {
-    padding: 0px 12px 60px;
-
+    padding: 0 12px 60px;
   }
   @media (min-width:1200px) {
-    // min-height: 100%;
-    padding: 75px 20px 0px;
-
+    padding: 75px 20px 0;
   }
-
 }
-.content-settings{
-  display: -webkit-flex;
-  display: -ms-flex;
-  display: flex;
-  padding-top: 0;
-  height: 100%;
-  // min-height: calc(100vh - 150px);
-  flex-direction: column;
-  justify-content: space-between;
-  @media (min-width:600px) {
-    padding-left: 0;
-    padding-right: 0;
-    margin-left: -12px;
-    margin-right: -12px;
-  }
-  @media (min-width:1200px) {
-    flex-direction: row;
-    justify-content: flex-start;
-    margin: 0;
-  }
+.colon {
+  margin-left: 8px;
+  margin-right: 8px;
 }
 app-settings{
   width: 100%;
