added dashboard components

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,19 @@
 <p>
   dashboard works!
 </p>
+
+<app-active-pair></app-active-pair>
+
+<app-graph></app-graph>
+
+<app-markets></app-markets>
+
+<app-trading></app-trading>
+
+<app-order-book></app-order-book>
+
+<app-trade-history></app-trade-history>
+
+<app-orders></app-orders>
+
+<app-chat></app-chat>
