added dark theme

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="page-wrap">
+<div class="page-wrap" [ngClass]="{'dark-theme': isCurrentThemeDark()}" >
   <app-header></app-header>
   <div class="content">
 
