--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -47,6 +47,9 @@ b {
   flex-direction: column;
   min-height: 100%;
 }
+.dark-theme{
+  background-color: $dark-indigo;
+}
 // .content {
 //   position: relative;
 //   box-sizing: border-box;
