--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -992,6 +992,10 @@
   }
 }
 
-
 // ----------------------------------------------------------------------------------
 /*----- HEADER END -----*/
+.dark-theme{
+  .header{
+    box-shadow: 0px 0px 4px 4px  rgba(0, 0, 0, 0.25);
+  }
+}
