--- a/src/app/settings/two-factor-authenticaton/two-factor-authentication.component.html
+++ b/src/app/settings/two-factor-authenticaton/two-factor-authentication.component.html
@@ -128,7 +128,7 @@
   <div class="row settings__buttons-row">
     <button class="btn settings__btn" (click)="updateAuthProviderSettings('GOOGLE')">
                     <span class="btn__icon btn__icon--blue btn__icon--hover-white">
-                      <svg width="22" height="" viewBox="0 0 22 22" xmlns="http://www.w3.org/2000/svg">
+                      <svg width="22"  viewBox="0 0 22 22" xmlns="http://www.w3.org/2000/svg">
                         <path d="M11 8.8V13.2H17.2238C16.3152 15.7608 13.8688 17.6 11 17.6C7.3612 17.6 4.4 14.6388 4.4 11C4.4 7.3612 7.3612 4.4 11 4.4C12.5774 4.4 14.0954 4.9654 15.2746 5.9928L18.1654 2.6752C16.1854 0.9504 13.6422 0 11 0C4.9346 0 0 4.9346 0 11C0 17.0654 4.9346 22 11 22C17.0654 22 22 17.0654 22 11V8.8H11Z"/>
                       </svg>
                     </span>
@@ -136,7 +136,7 @@
     </button>
     <button class="btn settings__btn" (click)="updateAuthProviderSettings('SMS')">
                     <span class="btn__icon btn__icon--blue btn__icon--hover-white">
-                      <svg width="14" height="" viewBox="0 0 14 21" xmlns="http://www.w3.org/2000/svg">
+                      <svg width="14"  viewBox="0 0 14 21" xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd" clip-rule="evenodd" d="M1 0C0.447266 0 0 0.449219 0 1V20C0 20.5508 0.447266 21 1 21H13C13.5527 21 14 20.5508 14 20V1C14 0.449219 13.5527 0 13 0H1ZM3 3C2.44727 3 2 3.44922 2 4V15C2 15.5508 2.44727 16 3 16H11C11.5527 16 12 15.5508 12 15V4C12 3.44922 11.5527 3 11 3H3ZM8 19C8 19.5508 7.55273 20 7 20C6.44727 20 6 19.5508 6 19C6 18.4492 6.44727 18 7 18C7.55273 18 8 18.4492 8 19ZM5.5 1C5.22363 1 5 1.22266 5 1.5C5 1.77734 5.22363 2 5.5 2H8.5C8.77637 2 9 1.77734 9 1.5C9 1.22266 8.77637 1 8.5 1H5.5Z" />
                       </svg>
                     </span>
@@ -144,7 +144,7 @@
     </button>
     <button class="btn settings__btn" (click)="updateAuthProviderSettings('TELEGRAM')">
                     <span class="btn__icon btn__icon--blue btn__icon--hover-white">
-                      <svg width="19" height="" viewBox="0 0 19 17" xmlns="http://www.w3.org/2000/svg">
+                      <svg width="19"  viewBox="0 0 19 17" xmlns="http://www.w3.org/2000/svg">
                         <path d="M14.8715 3.76389L7.80998 10.5092C7.56185 10.7462 7.40152 11.0644 7.35618 11.4094L7.11589 13.241C7.08388 13.4854 6.74925 13.51 6.68366 13.2728L5.75856 9.93274C5.65299 9.55154 5.80691 9.14455 6.13527 8.93669L14.6916 3.52085C14.8451 3.42377 15.0036 3.63767 14.8715 3.76389ZM18.2978 0.0364161L0.330292 7.1593C-0.112657 7.33493 -0.109259 7.98025 0.335518 8.15092L4.71339 9.83029L6.40809 15.4306C6.51667 15.7893 6.94368 15.9215 7.22696 15.6841L9.66735 13.6397C9.92319 13.4254 10.2872 13.4149 10.5543 13.6142L14.9562 16.8984C15.2592 17.1245 15.6884 16.954 15.7646 16.5772L18.9887 0.638907C19.072 0.227892 18.6791 -0.114777 18.2978 0.0364161Z"/>
                       </svg>
                     </span>
