--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -9,7 +9,7 @@ html {
 body {
   position: relative;
   height: 100%;
-  color: #000;
+  //color: #000;
   font-family: Roboto,Arial;
   font-size: 14px;
   font-weight: 400;
@@ -46,9 +46,14 @@ b {
   display: flex;
   flex-direction: column;
   min-height: 100%;
+  color:#000;
 }
 .dark-theme{
   background-color: $dark-indigo;
+  color:#fff;
+  .header{
+    box-shadow: 0px 0px 4px 4px  rgba(0, 0, 0, 0.25);
+  }
 }
 // .content {
 //   position: relative;
